--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26-django14, py26-django15, py26-django16, py27-django14, py27-django15, py27-django16, py27-django15, py33-django16
+envlist = py26-django14, py27-django14, py27-django15, py27-django16, py27-django15, py33-django16
 
 [testenv]
 setenv =
@@ -12,18 +12,6 @@ deps =
 basepython = python2.6
 deps =
     Django>=1.4,<1.5
-    -r{toxinidir}/requirements-test.txt
-
-[testenv:py26-django15]
-basepython = python2.6
-deps =
-    Django>=1.5,<1.6
-    -r{toxinidir}/requirements-test.txt
-
-[testenv:py26-django16]
-basepython = python2.6
-deps =
-    Django>=1.6,<1.7
     -r{toxinidir}/requirements-test.txt
 
 [testenv:py27-django14]
@@ -42,6 +30,12 @@ deps =
 basepython = python2.7
 deps =
     Django>=1.6,<1.7
+    -r{toxinidir}/requirements-test.txt
+
+[testenv:py27-django17]
+basepython = python2.7
+deps =
+    -egit+git://github.com/django/django.git@stable/1.7.x#egg=Django
     -r{toxinidir}/requirements-test.txt
 
 [testenv:py33-django15]
