--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26-django14, py27-django14, py27-django15, py27-django16, py33-django15, py33-django16
+envlist = py27-django14, py27-django15, py27-django16, py33-django15, py33-django16
 
 [testenv]
 setenv =
@@ -46,6 +46,24 @@ deps =
 
 [testenv:py33-django16]
 basepython = python3.3
+deps =
+    Django>=1.6,<1.7
+    -r{toxinidir}/requirements-test.txt
+
+[testenv:py33-django17]
+basepython = python3.3
+deps =
+    -egit+git://github.com/django/django.git@stable/1.7.x#egg=Django
+    -r{toxinidir}/requirements-test.txt
+
+[testenv:py34-django16]
+basepython = python3.4
+deps =
+    Django>=1.6,<1.7
+    -r{toxinidir}/requirements-test.txt
+
+[testenv:pypy-django16]
+basepython = pypy
 deps =
     Django>=1.6,<1.7
     -r{toxinidir}/requirements-test.txt
